--- a/KrisMobile/res/values/styles.xml
+++ b/KrisMobile/res/values/styles.xml
@@ -4,7 +4,7 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
+    <style name="AppBaseTheme" parent="android:Theme.Holo">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
@@ -20,6 +20,10 @@
 	<style name="KrisTheme" parent="AppTheme">
     	<item name="android:windowBackground">@drawable/blank_background2</item>
     	<item name="android:colorBackground">@drawable/blank_background2</item>
+    	
+	</style>
+	
+	<style name="SettingsFragmentTheme" parent="AppTheme">
 	</style>
 
 </resources>
