--- a/KrisMobile/res/menu/contractors.xml
+++ b/KrisMobile/res/menu/contractors.xml
@@ -1,11 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.krismobile.ContractorsActivity" >
-
+    
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_add_contractor"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:showAsAction="always"
+        android:title="@string/action_add_contractor"
+        android:icon="@drawable/sym_action_add"/>
 
 </menu>
