--- a/KrisMobile/res/values/styles.xml
+++ b/KrisMobile/res/values/styles.xml
@@ -20,6 +20,7 @@
 	<style name="KrisTheme" parent="AppTheme">
     	<item name="android:windowBackground">@drawable/blank_background2</item>
     	<item name="android:colorBackground">@drawable/blank_background2</item>
+    	<item name="android:actionBarStyle">@style/BarBackground</item>
     	
 	</style>
 	
@@ -39,6 +40,14 @@
 		<item name="android:shadowRadius">2</item>
 		<item name="android:paddingLeft">15dp</item>
 		<item name="android:paddingRight">15dp</item>
+	</style>
+	
+	<style name="Description">
+	    <item name="android:textColor">#4747d1</item>    
+	</style>
+	
+	<style name="BarBackground" parent="android:Widget.Holo.ActionBar.Solid">
+	    <item name="android:background">#212121</item>
 	</style>
 
 </resources>
