--- a/KrisMobile/res/menu/contractor.xml
+++ b/KrisMobile/res/menu/contractor.xml
@@ -6,6 +6,14 @@
         android:id="@+id/action_edit_contractor"
         android:orderInCategory="100"
         android:showAsAction="always"
-        android:title="@string/action_edit_contractor"/>
+        android:title="@string/action_edit_contractor"
+        android:icon="@android:drawable/ic_menu_edit"/>
+    
+    <item
+        android:id="@+id/action_delete_contractor"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom"
+        android:title="@string/action_delete_contractor"
+        android:icon="@android:drawable/ic_menu_delete"/>
 
 </menu>
