--- a/KrisMobile/res/layout/fragment_contractor_modify.xml
+++ b/KrisMobile/res/layout/fragment_contractor_modify.xml
@@ -19,20 +19,18 @@
             android:layout_marginBottom="5dp"
             android:orientation="vertical" >
             
-            
         	<LinearLayout
-                android:id="@+id/contractor_code_linearLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" 
-                android:orientation="horizontal" >
+        	    android:id="@+id/contractor_code_linearLayout"
+        	    android:layout_width="match_parent"
+        	    android:layout_height="wrap_content"
+        	    android:orientation="vertical" >
 
                 <TextView
                     android:id="@+id/textView9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/Description"
                     android:text="@string/code"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <EditText
                     android:id="@+id/contractor_code_editText"
@@ -41,23 +39,22 @@
                     android:layout_marginLeft="10dp"
                     android:hint="@string/code"
                     android:text=""
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/contractor_type_linearLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" 
-                android:orientation="horizontal" >
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
 
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/Description"
                     android:text="@string/type"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <Spinner
                     android:id="@+id/contractor_type_spinner"
@@ -73,15 +70,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:orientation="horizontal" >
+                android:orientation="vertical" >
 
                 <TextView
                     android:id="@+id/textView6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/Description"
                     android:text="@string/NIP"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <EditText
                     android:id="@+id/contractor_NIP_editText"
@@ -91,7 +87,7 @@
                     android:inputType="numberSigned"
                     android:hint="@string/NIP"
                     android:text=""
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
 
             </LinearLayout>
 
@@ -106,9 +102,8 @@
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/Description"
                     android:text="@string/address"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <EditText
                     android:id="@+id/contractor_address_editText"
@@ -117,7 +112,7 @@
                     android:layout_marginLeft="10dp"
                     android:hint="@string/address"
                     android:text=""
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
 
             </LinearLayout>
 
@@ -132,9 +127,8 @@
                     android:id="@+id/textView5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/Description"
                     android:text="@string/description"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <EditText
                     android:id="@+id/contractor_description_editText"
@@ -145,7 +139,7 @@
                     android:hint="@string/description"
                     android:lines="5"
                     android:text=""
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
 
             </LinearLayout>
 
