--- a/KrisMobile/res/layout/fragment_contractor.xml
+++ b/KrisMobile/res/layout/fragment_contractor.xml
@@ -13,7 +13,7 @@
     <ScrollView
         android:id="@+id/contractor_scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent" >
 
         <LinearLayout
             android:layout_width="match_parent"
