--- a/KrisMobile/res/xml/settings.xml
+++ b/KrisMobile/res/xml/settings.xml
@@ -15,10 +15,10 @@
             android:title="@string/dialog_based_preferences">
  
         <EditTextPreference
-                android:key="edittext_preference"
-                android:title="@string/title_edittext_preference"
+                android:key="server_address_preference"
+                android:title="@string/server_address"
                 android:summary="@string/summary_edittext_preference"
-                android:dialogTitle="@string/dialog_title_edittext_preference" />
+                android:dialogTitle="@string/server_address" />
                 
         <ListPreference
                 android:key="list_preference"
