--- a/KrisMobile/res/layout/document_item_row.xml
+++ b/KrisMobile/res/layout/document_item_row.xml
@@ -90,7 +90,9 @@
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_gravity="center"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/down60" />
 
 </LinearLayout>
