--- a/KrisMobile/res/layout/document_position_row.xml
+++ b/KrisMobile/res/layout/document_position_row.xml
@@ -86,7 +86,10 @@
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher" />
+            android:layout_marginRight="5dp"
+        	android:layout_marginLeft="5dp"
+        	android:layout_gravity="center"
+        	android:src="@drawable/down60" />
     </LinearLayout>
 
 </LinearLayout>
