--- a/KrisMobile/res/layout/fragment_item.xml
+++ b/KrisMobile/res/layout/fragment_item.xml
@@ -37,6 +37,7 @@
                     android:id="@+id/item_type_textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@android:color/secondary_text_dark"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceMedium" />
             </LinearLayout>
@@ -63,6 +64,7 @@
                         android:id="@+id/item_net_price_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@android:color/secondary_text_dark"
                         android:text=""
                         android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -71,6 +73,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:textColor="@android:color/secondary_text_dark"
                         android:text=""
                         android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -93,6 +96,7 @@
                     android:id="@+id/item_size_textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@android:color/secondary_text_dark"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceMedium" />
             </LinearLayout>
@@ -113,6 +117,7 @@
                     android:id="@+id/item_material_textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@android:color/secondary_text_dark"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceMedium" />
             </LinearLayout>
@@ -134,6 +139,7 @@
                     style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@android:color/secondary_text_dark"
                     android:gravity="start"                   
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -155,6 +161,7 @@
                     android:id="@+id/item_description_textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@android:color/secondary_text_dark"
                     android:singleLine="false"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceMedium" />
