Changes in layout and synchronization. Added replication between databases.

--- a/KrisMobile/res/layout/contractor_row.xml
+++ b/KrisMobile/res/layout/contractor_row.xml
@@ -8,7 +8,10 @@
         android:id="@+id/contractor_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher" />
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_gravity="center"
+        android:src="@drawable/contractors_small" />
 
     <LinearLayout
         android:layout_width="match_parent"
