--- a/KrisMobile/res/layout/fragment_contractor_modify.xml
+++ b/KrisMobile/res/layout/fragment_contractor_modify.xml
@@ -42,7 +42,9 @@
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
             </LinearLayout>
-
+            
+ 			<include layout="@layout/divider_view"/>
+ 			
             <LinearLayout
                 android:id="@+id/contractor_type_linearLayout"
                 android:layout_width="match_parent"
@@ -65,6 +67,8 @@
 
             </LinearLayout>
 
+            <include layout="@layout/divider_view"/>
+            
             <LinearLayout
                 android:id="@+id/contractor_NIP_linearLayout"
                 android:layout_width="match_parent"
@@ -91,6 +95,8 @@
 
             </LinearLayout>
 
+            <include layout="@layout/divider_view"/>
+            
             <LinearLayout
                 android:id="@+id/contractor_Address_linearLayout"
                 android:layout_width="match_parent"
@@ -116,6 +122,8 @@
 
             </LinearLayout>
 
+            <include layout="@layout/divider_view"/>
+            
             <LinearLayout
                 android:id="@+id/contractor_description_linearLayout"
                 android:layout_width="match_parent"
