--- a/KrisMobile/res/layout/fragment_item_modify.xml
+++ b/KrisMobile/res/layout/fragment_item_modify.xml
@@ -2,7 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/item_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent" 
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <ScrollView
         android:id="@+id/item_scrollView"
@@ -40,6 +44,9 @@
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceMedium" />
             </LinearLayout>
+            
+            <include layout="@layout/divider_view"/>
+            
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -60,6 +67,8 @@
                     android:textAppearance="?android:attr/textAppearanceMedium" />
             </LinearLayout>
             
+            <include layout="@layout/divider_view"/>
+            
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -78,6 +87,8 @@
                     android:layout_height="wrap_content"
                     />
             </LinearLayout>
+            
+            <include layout="@layout/divider_view"/>
             
             <LinearLayout
                 android:layout_width="match_parent"
@@ -134,6 +145,8 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <include layout="@layout/divider_view"/>
+            
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -153,6 +166,8 @@
                     />
             </LinearLayout>
 
+            <include layout="@layout/divider_view"/>
+            
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -171,6 +186,8 @@
                     android:layout_height="wrap_content"/>
             </LinearLayout>
 
+            <include layout="@layout/divider_view"/>
+            
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
