--- a/KrisMobile/res/layout/fragment_items.xml
+++ b/KrisMobile/res/layout/fragment_items.xml
@@ -10,7 +10,9 @@
         android:id="@+id/items_listView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.63" >
+        android:layout_weight="0.63" 
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+    	android:paddingRight="@dimen/activity_horizontal_margin">
 
     </ListView>
 
