--- a/KrisMobile/res/layout/item_row.xml
+++ b/KrisMobile/res/layout/item_row.xml
@@ -3,7 +3,9 @@
     android:id="@+id/item_row_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" >
+    android:orientation="horizontal" 
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin">
 
     <LinearLayout
         android:layout_width="0dp"
