--- a/KrisMobile/res/layout/payment_row.xml
+++ b/KrisMobile/res/layout/payment_row.xml
@@ -14,7 +14,7 @@
 
         <LinearLayout
             android:id="@+id/payment_top_ll"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
 
@@ -22,15 +22,24 @@
                 android:id="@+id/payment_name_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
                 android:text="Medium Text"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
                 android:id="@+id/payment_date_textView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:text="TextView" />
+
+            <TextView
+                android:id="@+id/payment_value_textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="Small Text"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
 
         </LinearLayout>
 
@@ -40,17 +49,10 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/contractorCode_textView"
+                android:id="@+id/payment_description_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Small Text"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-            <TextView
-                android:id="@+id/payment_value_textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="right"
+                android:layout_marginBottom="10dp"
                 android:text="Small Text"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
@@ -59,7 +61,8 @@
     <CheckBox
         android:id="@+id/payment_checkBox"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
         android:text="" />
 
 </LinearLayout>
