--- a/KrisMobile/res/layout/fragment_item_modify.xml
+++ b/KrisMobile/res/layout/fragment_item_modify.xml
@@ -113,7 +113,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.4"
-                        android:inputType="numberSigned"
+                        android:inputType="numberDecimal"
                         android:text=""
                         android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -130,7 +130,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.4"
-                        android:inputType="numberSigned"
+                        android:inputType="numberDecimal"
                         android:text=""
                         android:textAppearance="?android:attr/textAppearanceMedium" />
 
