--- a/KrisMobile/res/xml/settings.xml
+++ b/KrisMobile/res/xml/settings.xml
@@ -25,6 +25,11 @@
                 android:summary="@string/bucket_name"
                 android:dialogTitle="@string/bucket_name" 
                 android:inputType="text" />
+        
+        <Preference 
+            	android:key="delete_database" 
+           		android:title="@string/delete_database"
+           		android:summary="@string/delete_all_data_from_batabase"/>
  
     </PreferenceCategory>
  
