Disabled documents add and edit in web.

--- a/KrisWeb/web/css/styles.css
+++ b/KrisWeb/web/css/styles.css
@@ -93,6 +93,15 @@ h4{
     overflow-y: scroll;
 }
 
+#document-position-info{
+    display: inline;
+
+
+}
+
+#document-position-info > h6 >span {
+    margin-right: 10px;
+}
 .item-details-list-group{
     overflow-y: scroll;
 }
